# nepjua

./: .cursorrules  .envrc  .eslintrc.cjs  .gitignore  .gitmodules  .main.enc.yaml  .prettierrc.yaml  .sops.yaml  Dockerfile  Justfile  README.md  Taskfile.yaml  another-test.enc.yaml  bun.lockb  compose.yaml  config.nix  dconf-in.settings  dconf.settings  deno.jsonc  devenv.nix  flake-old.nix  flake.nix  nepjua.code-workspace  old-flake.nix  package.json  private  pyproject.toml  result  test.enc.yaml  tmp.enc.env  treefmt.nix  tsconfig.json  utils.nu  vitest.config.ts
.specify/: init-options.json
cli/: main.ts  sops.ts  test-setup.ts  zx-configuration.ts
config/: zed-keymap.json  zed-keymap.jsonc  zed-settings.json  zed-settings.jsonc
configurations/: hetzner.nix  kaori.nix  kryon.nix  raiden.nix  ryuko.nix  tristan.nix
darwin/: common.nix  configuration.nix  gui-apps.nix  raiden.nix  ryuko.nix
docs/: README.md  custom-gpt-instructions.md
flake-module/: default.nix
home/: common.nix  darwin.nix  entry.nix  exit.nix  musu-darwin.nix  nixos-cloud.nix  nixos-wsl.nix  nixos.nix
home-manager/: home.nix  vscode.nix
my-lib/: default.nix
my-shell/: default.nix  fresh.nix  gpg-1password.nix  packages.nix
new-machines/: nepjua-wsl.nix
nix/: ksops.nix  nep.nix  secrets-dev-shell.nix
nix-config/: .gitignore  .nixd.json  .prettierrc.yml  Brewfile  Justfile  README.md  flake.nix
nixos/: bootloader.nix  configuration.nix  docker.nix  fs.nix  hardware-configuration.nix
nixos-hetzner/: configuration.nix  docker.nix
nixos-wsl/: configuration.nix
(+619 files in other folders)
