[tool.poetry]
name = "nix-config"
version = "0.1.0"
description = ""
authors = ["Yasin Uslu <nepjua@gmail.com>"]
readme = "README.md"
packages = [{include = "tools"}]

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
